[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Tween_win.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI_Continue.tscn" type="PackedScene" id=2]
[ext_resource path="res://KOMIKAX_.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/RestartConditional.gd" type="Script" id=5]


[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StreamTexture" id=2]

flags = 4
load_path = "res://.import/b_4.png-b684815f7a19192992793300eb45669c.stex"

[sub_resource type="StreamTexture" id=3]

flags = 4
load_path = "res://.import/b_5.png-97745097ebafd193ffb8dbe9138e6145.stex"

[node name="UI_Gamewin" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
script = ExtResource( 1 )

[node name="Continue" parent="Tween" index="0" instance=ExtResource( 2 )]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 201.403, 864.804 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Label" type="Label" parent="Tween" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -396.0
margin_top = -260.0
margin_right = 402.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 375, 123 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Stabilised!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="ExitButton" parent="Tween" index="2" instance=ExtResource( 4 )]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 201.403, 1051.47 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
normal = SubResource( 2 )
pressed = SubResource( 3 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[connection signal="tween_completed" from="Tween" to="Tween" method="_on_Tween_completed"]


